# group8

./: .gitignore  README.md  commands.py  main.py  observers.py  pyproject.toml
A3/: README.md  complexity_report.md  data_loader.py  main.py  profiler.py  reporting.ipynb  requirements.txt  restats  strategies.py  test_models.py
A3/result/: complexity_report.md  runtime_stat_MAOptimized_memo_Array.csv  runtime_stat_MAOptimized_memo_LRU_Cache.csv  runtime_stat_naiveMA.csv  runtime_stat_windowMA.csv
A3/src/: data_loader.py  main.py  models.py  profiler.py  reporting.py  strategies.py
A3/tests/: test_models.py
A6/: README.md  analytics.py  commands.py  data_loader.py  design_report.md  engine.py  invokers.py  main.py  models.py  observers.py  pattern_factory.py  reporting.py  requirements.txt  signals.json  strategies.py
A6/config/: config.py
A6/patterns/: builder_pattern.py  commands.py  factory_pattern.py  singleton_pattern.py  strategies.py
A6/tests/: conftest.py  test_commands.py  test_decorators.py  test_factory.py  test_models.py  test_observer.py  test_singleton.py  test_strategies.py
A7/: data_loader.py  metrics.py  parallel.py  performance_report.md  requirements.txt
config/: strategy_params.json
patterns/: builder_pattern.py
