[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
version = "0.1.0"
description = "FINM325 Assignment"
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
# Tell pytest where the code lives
testpaths = ["A3/tests"]
pythonpath = ["A3/src"]

[tool.setuptools.packages.find]
where = ["A3/src"]
