[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "group8-finm325"
version = "0.1.0"
description = "FINM325 Group 8 Project - Moving Average Strategies and Pattern Analysis"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib", 
    "memory-profiler",
    "pytest"
]

[tool.pytest.ini_options]
# Tell pytest where to find tests and code
testpaths = ["A6/tests"]
pythonpath = [".", "A6"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--import-mode=importlib"
]

[tool.setuptools.packages.find]
include = ["A6*"]
